h3 tag added in index file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello</h1>
     <p>I just edited this file</p>
+    <h3>yes we can</h3>
     <h2>for the second type of merge</h2>
 </body>
 </html>
