--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>I just edited this file</p>
     <h3>yes we can</h3>
     <h2>for the second type of merge</h2>
+    <h5>Also nothing</h5>
 </body>
 </html>
